--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div id="texto"></div>
 
   <div id="susto">
-    <img src="https://i.imgur.com/fnGTgmL.png" alt="susto demoníaco">
+    <img src="https://i.imgur.com/1ZQZ1ZL.png" alt="susto demoníaco">
     <audio id="grito" src="https://www.myinstants.com/media/sounds/screamer.mp3"></audio>
   </div>
 
